# graphite-cli-clone

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  PACKAGE_VERIFICATION.md  PYPI_DEPLOYMENT.md  README.md  coverage.xml  design.md  pyproject.toml  requirements.md  task_dag.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  task_dag_summary.md  tech_stack.md
src/graphite_cli/: __init__.py
src/graphite_cli/cli/: __init__.py  app.py
src/graphite_cli/cli/output/: __init__.py  formatter.py
src/graphite_cli/exceptions/: __init__.py  base.py
src/graphite_cli/models/: __init__.py  branch.py  config.py  pull_request.py  repository.py  stack.py
src/graphite_cli/utils/: __init__.py  branch_name.py  git_utils.py  logging.py
tests/: __init__.py
tests/unit/: test_branch.py  test_branch_name.py  test_config.py  test_exceptions.py  test_formatter.py  test_git_utils.py  test_logging.py  test_pull_request.py  test_repository.py
